--- a/weather_app/style.scss
+++ b/weather_app/style.scss
@@ -12,6 +12,7 @@
     text-decoration: none;
 }
 body {
+    position: relative;
     padding: 0;
     margin: 0;
     background-color: #1e202b;
@@ -22,6 +23,18 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+.loader {
+    opacity: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 50%);
+    width: 20rem;
+    height: 15rem;
+    transition: opacity 0.3s ease;
 }
 .card {
     border-radius: 0.7rem;
